# virtual_prototyping

adc_tlm_model/: adc_sys.gtkw  log  setenv.sh  vp_exercise_3.odt  wave_system.vcd
adc_tlm_model/barrera@linda.rhrk.uni-kl.de/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  wave_system.vcd
adc_tlm_model/barrera@linda.rhrk.uni-kl.de/cmake-files/: FindSystemCAMS.cmake
adc_tlm_model/barrera@linda.rhrk.uni-kl.de/include/: analog_mux.h  analog_mux.h~  defines.h  defines.h~  register_file_tlm_target.h  register_file_tlm_target.h~  sample_hold.h  sample_hold.h~  tlm_initiator.h  tlm_initiator.h~  user_interface.h  wave_sine.h  wave_triangle.h
adc_tlm_model/barrera@linda.rhrk.uni-kl.de/src/: #pv_interface.h#  .#pv_interface.h  adc_system.cpp  analog_mux.cpp  cyclic_adc_pipe_stage.cpp  cyclic_adc_pipe_stage.cpp~  cyclic_pipeline.cpp~  gain_stage.cpp  gain_stage.cpp~  offset.cpp~  pv_interface.h  register_file_tlm_target.cpp  sample_hold.cpp  sample_hold.cpp~  tlm_initiator.cpp  tlm_initiator.cpp~  wave_saw_tooth.cpp  wave_sine.cpp  wave_triangle.cpp  wave_triangle.cpp~
adc_tlm_model/barrera@linda.rhrk.uni-kl.de/sw/: CMakeLists.txt  CMakeLists.txt~  cmake_install.cmake  test_sw.cpp~
adc_tlm_model/barrera@linda.rhrk.uni-kl.de/tb/: #adc_simple_tb.cpp#  CMakeLists.txt  Makefile  adc_simple_tb.cpp  adc_system_primary_tb.cpp  cmake_install.cmake  cyclic_pipe_tb.cpp  tlm_simple_test.cpp  tlm_simple_test.cpp~
adc_tlm_model/include/: #cyclic_pipeline.h#  .register_file_tlm_target.h.swp  cyclic_adc_pipe_stage.h  cyclic_adc_pipe_stage.h~  gain_stage.h  (+8 more)
(+23 files in other folders)
